WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128690
WK2: coordinate mapping for frames does not work when the page is scrolled
https://bugs.webkit.org/show_bug.cgi?id=128690
Summary
WK2: coordinate mapping for frames does not work when the page is scrolled
Enrica Casucci
Reported
2014-02-12 14:20:30 PST
On iOS we use delegate scrolling and we should not take into account the scroll offset when converting points and rectangles. <
rdar://problem/16042925
>
Attachments
Patch
(2.68 KB, patch)
2014-02-12 14:23 PST
,
Enrica Casucci
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-02-12 14:23:42 PST
Created
attachment 224006
[details]
Patch
Enrica Casucci
Comment 2
2014-02-12 14:32:22 PST
Committed revision 163989.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug