WK2: coordinate mapping for frames does not work when the page is scrolled. https://bugs.webkit.org/show_bug.cgi?id=128690 <rdar://problem/16042925>

Reviewed by Simon Fraser.

We should not apply the scroll offset when using delegate scrolling.

* platform/ScrollView.cpp:
(WebCore::ScrollView::rootViewToContents):
(WebCore::ScrollView::contentsToRootView):
(WebCore::ScrollView::rootViewToTotalContents):



Canonical link: https://commits.webkit.org/146732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163989 268f45cc-cd09-0410-ab3c-d52691b4dbfc